<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit1"
        android:layout_width="@dimen/editWidth"
        android:textSize="@dimen/textSizeMedium"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginMedium"
        android:layout_marginTop="@dimen/marginLarge"
        android:inputType="numberDecimal"
        android:hint="@string/hintNum1" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="@dimen/editWidth"
        android:textSize="@dimen/textSizeMedium"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginMedium"
        android:hint="@string/hintNum2" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginMedium"
        android:text="@string/btnPlus"
        android:textSize="@dimen/textSizeMedium"
        android:backgroundTint="@color/lightRe"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginMedium"
        android:text="@string/btnMinus"
        android:textSize="@dimen/textSizeMedium"
        android:backgroundTint="@color/lightOr"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginMedium"
        android:text="@string/btnMultiply"
        android:textSize="@dimen/textSizeMedium"
        android:backgroundTint="@color/lightGr"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginMedium"
        android:text="@string/btnDivide"
        android:textSize="@dimen/textSizeMedium"
        android:backgroundTint="@color/lightBl"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnMod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginMedium"
        android:text="@string/btnMod"
        android:textSize="@dimen/textSizeMedium"
        android:backgroundTint="@color/lightPu"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:textSize="@dimen/textSizeLarge"
        android:layout_margin="@dimen/marginLarge"
        android:text="@string/textResult"
        android:textColor="@color/Red" />
</LinearLayout>